--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -39,7 +39,7 @@ bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
 bUseAutocorrect=False
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
-DefaultViewportMouseLockMode=LockOnCapture
+DefaultViewportMouseLockMode=DoNotLock
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
@@ -56,6 +56,5 @@ DoubleClickTime=0.200000
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
-+ConsoleKeys=Tilde
-
++ConsoleKeys=AnyKey
 
